# Report-generation

./: .gitignore  测试后问题.md
rear end/: .env.example  .gitignore  README.md  postman_report_backend_collection.json  pyproject.toml
rear end/app/: main.py
rear end/app/ai/: chapter_generator.py  material_context.py  model_client.py  outline_generator.py
rear end/app/core/: auth_utils.py  config.py  errors.py  response.py  security.py  trace.py
rear end/app/db/: base.py  bootstrap.py  types.py
rear end/app/entity/: __init__.py  content.py  export.py  material.py  outline.py  report.py  system_config.py  template.py  user.py
rear end/app/export/: docx_builder.py  file_storage.py  markdown_builder.py  text_builder.py
rear end/app/repository/: content_repository.py  export_repository.py  report_repository.py
rear end/app/schemas/: auth.py  content.py  export.py  outline.py  report.py  template.py  user.py
rear end/app/service/: auth_service.py  content_generation_service.py  export_service.py  material_service.py  model_config_service.py  outline_service.py  permission_service.py  report_service.py  template_service.py  user_service.py  verification_code_service.py
rear end/app/utils/: datetime_utils.py  id_utils.py  outline_numbering.py  report_labels.py
rear end/scripts/: acceptance_http.py
rear end/storage/exports/: exp_001-____________.docx  exp_004-测试电厂迎峰度夏检查报告.txt  exp_005-测试电厂迎峰度夏检查报告.docx
rear end/tests/: test_admin_resources.py  test_content_stream.py  test_core.py  test_database_models.py  test_exports.py  test_outlines.py  test_reports.py
(+122 files in other folders)
