[project]
name = "report-generation-backend"
version = "0.1.0"
description = "FastAPI backend for report generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.3",
    "pymysql>=1.1",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
